# murkelhausen

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.rst  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  shelly.md  sonos.md
.github/workflows/: python-app.yml
ansible/: README.md  atuin.yaml  beowulf.yaml  beowulf.yml  common.yaml  docker.yaml  initial_load.sh  inventory.yml  local.yaml  local.yml  oh-my-zsh.yaml  playbook.yaml  powerlevel10k.yaml  python.yaml
ansible/dot-files/: .p10k.zsh
ansible/files/: .pyenvrc  .taskrc
ansible/task_collections/: atuin.yaml  common.yaml  docker.yaml  git.yaml  jetbrains.yaml  k8s.yaml  oh-my-zsh.yaml  powerlevel10k.yaml  python.yaml  ubuntu22.04.yaml  wsl_gui.yaml
ansible/tasks/: atuin.yaml  atuin.yml  aws.yaml  aws.yml  common.yml  docker.yml  git.yml  go.yml  homebrew.yml  jetbrains.yaml  jetbrains.yml  k8s.yml  oh-my-zsh.yaml  oh-my-zsh.yml  powerlevel10k.yml  python.yaml  python.yml  taskwarrior.yml  terraform.yml  wsl_gui.yml
app/: Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
app/src/murkelhausen/: config.py  default.toml
app/src/murkelhausen/cli/: cli.py
app/src/murkelhausen/mqtt/: client.py
app/src/murkelhausen/sonos/: main.py
app/src/murkelhausen/util/: config_util.py  logger.py
deepl/: deepl.py
devices/: README.md
devices/beowulf/: README.md  install.sh
devices/raspberries/: setup.sh
devices/smartmeter_ir_reader/: Config_stromhaushalt_1021_11.1.0.dmp  Config_stromwaermepumpe_5182_11.1.0.dmp  README.md  stromhaushalt.script  stromwaermepumpe.script
devices/zigbee/: README.md
docker/: README.md  docker-compose.yml
docker/kafka/: README.md  docker-compose.yml
docker/mosquitto/: README.md  docker-compose.yml
docker/superset/: README.md  docker-compose.yml
docker/zigbee2mqtt/: configuration.yaml
gohausen/: .gitignore  README.md  config.yaml  dispatcher.go  dto.go  go.mod  go.sum  gohausen.sh  kafkaProducer.go  main.go  mqttConsumer.go
gohausen/dispatcher/: README.md  app.go
gohausen/dto/: dto.go
gohausen/kafka/: producer.go
gohausen/mqtt/: README.md  consumer.go
notes/: patchfeld.md
rasp2/: setup.sh
rasp2/unifi/: docker-compose.yml
recipes/: fischfilet_pangasius.md  maultauschenauflauf.md  moehrengemuese.md  pfannenkuchen.md  porridge.md  tomatensosse.md
recipes/Backen/: brot.md  butterstuten.md  pizzateig.md
recipes/Frühstück/: porridge.md
recipes/Kochen/: 524.md  braten.md  chili_con_carne.md  fischfilet_pangasius.md  kartoffelsalat.md  maultauschenauflauf.md  moehrengemuese.md  pfannenkuchen.md  reis_a_la_oma.md  rinderzunge_in_madeirasosse.md  sojahähnchen.md  zucchini-mix.md
recipes/Soßen/: kaesesauce.md  tomatensosse.md
recipes/Suppe/: brokkolicremesuppe.md  spargelcremesuppe.md
scripts/: add_recipe.py  install.sh
src/murkelhausen/: config.py  default.toml  pipeline.py
system_install/: Dockerfile  apt-installs.sh  atuin.sh  aws.sh  brave.sh  copyq.sh  docker.sh  print_color.sh  pyenv.sh  python-dependencies.sh  snap.sh  taskwarrior.sh  test.sh  tooling.sh  ulauncher.sh  wsl_dns.sh  zsh.sh
zigbee/: README.md  docker-compose.yml
(+62 files in other folders)
