[tool.poetry]
name = "murkelhausen"
version = "0.1.0"
description = ""
authors = ["Relativity74205 <arkadius@schuchhardt.com>"]

[tool.poetry.scripts]
murkelhausen = "murkelhausen.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
toml = "^0.10.2"
click = "^8.0.1"
requests = "^2.25.1"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
black = "^21.6b0"
liccheck = "^0.6.0"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
