[tool.poetry]
name = "murkelhausen"
version = "0.1.0"
description = ""
authors = ["Relativity74205 <arkadius@schuchhardt.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
pendulum = "^2.1.2"
click = "^8.1.3"
pydantic = "^1.10.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
bandit = "^1.7.4"
safety = "^2.3.1"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest]
addopts = "--strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
data_file = ".coverage/coverage_report"
source = ["murkelhausen"]
omit = [
  "*/__init__.py",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[tool.black]
target-version = ["py310"]
line-length = 90